--- a/.github/workflows/deploy-JUtils.yml
+++ b/.github/workflows/deploy-JUtils.yml
@@ -18,11 +18,11 @@ jobs:
           dotnet-version: 6.0.x
           
       - name: Restore
-      - run: dotnet restore ${{ env.PROJECT_PATH }}
+        run: dotnet restore ${{ env.PROJECT_PATH }}
       - name: Build  
-      - run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
+        run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
       - name: Publish
-      - run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
+        run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
         
       - uses: action/create-release@v1
         id: create_release
