--- a/.github/workflows/deploy-JUtils.yml
+++ b/.github/workflows/deploy-JUtils.yml
@@ -17,11 +17,11 @@ jobs:
         with:
           dotnet-version: 6.0.x
           
-      - name: Restore
+      - name: dotnet restore
         run: dotnet restore ${{ env.PROJECT_PATH }}
-      - name: Build  
+      - name: dotnet build  
         run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
-      - name: Publish
+      - name: dotnet publish
         run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
         
       - uses: action/create-release@v1
