--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "app"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "A small utility app mainly meant for my personal use"
+authors = ["Jonas Seifried"]
 license = ""
-repository = ""
+repository = "https://github.com/JonasSeifried/JUtils"
 default-run = "app"
 edition = "2021"
 rust-version = "1.60"
@@ -17,10 +17,12 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.5.1", features = ["shell-open"] }
+thiserror = "1.0.49"
+tauri = { version = "1.5.1", features = ["global-shortcut-all", "shell-open"] }
+rusqlite = { version = "0.29.0", features = ["bundled"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
