--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "@tauri-apps/cli": "^1.5.2",
     "@types/node": "^20.8.4",
     "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
