--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.49"
 tauri = { version = "1.5.1", features = ["global-shortcut-all", "shell-open"] }
 global-hotkey = "0.4.0"
+winit = "0.29.3"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 auto-launch = "0.5.0"
 rodio = "0.17.3"
