--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "1.5.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.49"
-tauri = { version = "1.5.1", features = ["global-shortcut-all", "shell-open"] }
+tauri = { version = "1.5.1", features = [ "system-tray", "global-shortcut-all", "shell-open"] }
 global-hotkey = "0.4.0"
 winit = "0.29.3"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
