--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,18 +15,23 @@ rust-version = "1.60"
 tauri-build = { version = "1.5.0", features = [] }
 
 [dependencies]
+
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.49"
-tauri = { version = "1.5.1", features = [ "system-tray", "global-shortcut-all", "shell-open"] }
+tauri = { version = "1.5.1", features = [
+    "system-tray",
+    "global-shortcut-all",
+    "shell-open",
+] }
 global-hotkey = "0.4.0"
 winit = "0.29.3"
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+rusqlite = { version = "0.30.0", features = ["bundled"] }
 auto-launch = "0.5.0"
 rodio = "0.17.3"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.51.1", features = [
+windows = { version = "0.52.0", features = [
     "Win32_Media_Audio",
     "Win32_System_Com",
     "Win32_Foundation",
