--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,10 +25,13 @@ tauri = { version = "1.5.1", features = [
     "shell-open",
 ] }
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
+log = "^0.4"
 global-hotkey = "0.4.0"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 rodio = "0.17.3"
 app_dirs2 = "2.5.5"
+
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.52.0", features = [
