--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   "dependencies": {
     "tauri-plugin-autostart-api": "github:tauri-apps/tauri-plugin-autostart#v1",
     "tauri-plugin-log-api": "github:tauri-apps/tauri-plugin-log#v1",
-    "vue": "^3.3.4"
+    "vue": "^3.3.11"
   },
   "devDependencies": {
-    "@tauri-apps/api": "^1.5.0",
-    "@tauri-apps/cli": "^1.5.2",
-    "@types/node": "^20.8.4",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@tauri-apps/api": "^1.5.2",
+    "@tauri-apps/cli": "1.5.7",
+    "@types/node": "^20.10.4",
+    "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "postcss": "^8.4.32",
+    "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.9",
+    "vue-tsc": "^1.8.25"
   }
 }
