--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,9 @@ tauri-build = { version = "1.5.0", features = [] }
 
 [dependencies]
 
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-thiserror = "1.0.49"
+serde_json = "^1.0"
+serde = { version = "^1.0", features = ["derive"] }
+thiserror = "^1.0"
 tauri = { version = "1.5.1", features = [
     "system-tray",
     "global-shortcut-all",
@@ -27,7 +27,7 @@ tauri = { version = "1.5.1", features = [
 tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 log = "^0.4"
-global-hotkey = "0.4.0"
+global-hotkey = "^0.4"
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 rodio = "0.17.3"
 app_dirs2 = "2.5.5"
